@@ -1,5 +1,9 @@
 ;;;; -*- coding: utf-8; fill-column: 78 -*-
 
+changes relative to sbcl-2.3.8:
+  * minor incompatible change: some SB-POSIX interfaces adhere to the spec
+    that a NULL result from the C library is an error if and only if errno
+    was altered by the call. SYSCALL-ERROR will be signaled if so.
 changes in sbcl-2.3.8 relative to sbcl-2.3.7:
   * enhancement: a mark-region parallel garbage collector is available as a
     build-time option; it can be enabled by adding
